@@ -14,13 +14,11 @@ package org.eclipse.jdt.core.tests.compiler.regression;
 
 import java.io.IOException;
 import java.util.Map;
-
-import org.eclipse.jdt.internal.compiler.classfmt.ClassFileConstants;
+import junit.framework.Test;
 import org.eclipse.jdt.core.util.ClassFileBytesDisassembler;
 import org.eclipse.jdt.core.util.ClassFormatException;
+import org.eclipse.jdt.internal.compiler.classfmt.ClassFileConstants;
 import org.eclipse.jdt.internal.compiler.impl.CompilerOptions;
-
-import junit.framework.Test;
 
 public class PatternMatching16Test extends AbstractRegressionTest {
 
@@ -198,17 +196,24 @@ public class PatternMatching16Test extends AbstractRegressionTest {
 	}
 	public void test003a() {
 		Map<String, String> options = getCompilerOptions(true);
-		runNegativeTest(
+		String[] testFiles =
 				new String[] {
 						"X3.java",
 						"@SuppressWarnings(\"preview\")\n" +
 						"public class X3 {\n" +
 						"  public void foo(Number num) {\n" +
 						"		if (num instanceof int) {\n" +
+						"			System.out.print(\"int\");\n" +
 						"		}\n " +
 						"	}\n" +
+						"	public static void main(String... args) {\n" +
+						"		new X3().foo(3);" +
+						"	}\n" +
 						"}\n",
-				},
+				};
+		if (this.complianceLevel < ClassFileConstants.JDK23) {
+			runNegativeTest(
+				testFiles,
 				"----------\n" +
 				"1. ERROR in X3.java (at line 4)\n" +
 				"	if (num instanceof int) {\n" +
@@ -219,6 +224,9 @@ public class PatternMatching16Test extends AbstractRegressionTest {
 				null,
 				true,
 				options);
+		} else {
+			runConformTest(testFiles, "int", options, new String[] {"--enable-preview"}, JavacTestOptions.DEFAULT);
+		}
 	}
 	public void test004() {
 		Map<String, String> options = getCompilerOptions(true);
@@ -2393,7 +2401,7 @@ public class PatternMatching16Test extends AbstractRegressionTest {
 				"----------\n" +
 				"1. ERROR in X.java (at line 4)\n" +
 				"	if (obj instanceof T t) {\n" +
-				"	    ^^^\n" +
+				"	    ^^^^^^^^^^^^^^^^^^\n" +
 				"Type Object cannot be safely cast to T\n" +
 				"----------\n",
 				"X.java:4: error: Object cannot be safely cast to T\n" +
@@ -2452,7 +2460,7 @@ public class PatternMatching16Test extends AbstractRegressionTest {
 				"----------\n" +
 				"1. ERROR in X.java (at line 4)\n" +
 				"	if (obj instanceof X<String> p) {\n" +
-				"	    ^^^\n" +
+				"	    ^^^^^^^^^^^^^^^^^^^^^^^^^^\n" +
 				"Type X<capture#1-of ?> cannot be safely cast to X<String>\n" +
 				"----------\n",
 				"",
